# hire-backend

./: .gitignore  LICENSE  README.md  hire-backend.cabal  stack.yaml
app/: Main.hs
src/: Graph.hs  Web.hs
