name:                hire-backend
version:             0.1.0.0
synopsis:            Hire Backend Dev Project
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Tripshot
maintainer:          wlewis@tripshot.com
copyright:           2016 Tripshot
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web
                     , Graph
  build-depends:       base >= 4.7 && < 5
                     , snap-core
                     , snap-server
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable hire-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hire-backend
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tripshot/hire-backend
